--- a/app/design/frontend/Shopcsn/Store/web/css/source/style/_product-detail.less
+++ b/app/design/frontend/Shopcsn/Store/web/css/source/style/_product-detail.less
@@ -288,6 +288,7 @@
                             .sub-content {
                                 width: 1140px;
                                 margin: 0 auto;
+                            }
                                 .form-group {
                                     position: relative;
                                     .label {
@@ -342,6 +343,7 @@
                                 }
                                 .review-legend {
                                     border-bottom: 0;
+                                    margin-bottom: 15px;
                                 }
                                 .review-field-ratings {
                                     legend {
@@ -375,7 +377,7 @@
                                         height: 100px !important;
                                     }
                                 }
-                            }
+                            
                             .label {
                                 color: #000;
                             }
